tests/test_assets/semantic/invalid/arrays/return_element_type.cog
// semantic error at line 2: initializer type does not match declared type
// 1 semantic error generated.

test::() -> i32[3] {
    return [1, true, 3];
}