tests/test_assets/semantic/invalid/arrays/return_element_type.expected
semantic error at line 5: initializer type does not match declared type
1 semantic error generated.
